--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "serve": "http-server",
+    "serve": "http-server ./src",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
